[package]
name = "simple-forms"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
rusqlite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
strip = "debuginfo"
